# effects-introduction

./: .gitignore  README.md  custom.css  index.html  sitemap.xml
.github/workflows/: haskell-build.yaml  publish-slides.yaml  scala-build.yaml
categories/: index.xml
haskell/: effects.cabal
haskell/app/: Main.hs
haskell/lib/: MTL.hs
haskell/lib/Free/: App.hs  Core.hs
haskell/lib/Free/Core/Interpreters/: Production.hs  Stepper.hs
haskell/lib/Free/Stepper/: Core.hs  Interpreters.hs
haskell/lib/MTL/: Core.hs  Interpreters.hs
haskell/lib/MTL/Core/Interpreters/: Production.hs  Stepper.hs
haskell/lib/MTL/Interpreters/: Production.hs  Stepper.hs
haskell/lib/MTL/Stepper/: Core.hs  Interpreters.hs
haskell/lib/Stepper/: Core.hs  Interpreters.hs
haskell/tests/: MTLTest.hs  Main.hs
haskell/tests/Test/: Free.hs  MTL.hs
haskell/tests/Test/Free/: Interpreters.hs
haskell/tests/Test/MTL/: Interpreters.hs
scala/: .gitignore  .scalafmt.conf  build.sbt
scala/src/main/scala/: Main.scala
scala/src/main/scala/free/core/: Core.scala
scala/src/main/scala/free/core/interpreters/: Production.scala  Stepper.scala
scala/src/main/scala/free/stepper/: Core.scala
scala/src/main/scala/free/stepper/interpreters/: IOStepper.scala
scala/src/main/scala/mtl/: mtl.scala
scala/src/main/scala/mtl/core/: Core.scala
scala/src/main/scala/mtl/core/interpreters/: Production.scala  Stepper.scala
scala/src/main/scala/mtl/stepper/: Core.scala
scala/src/main/scala/mtl/stepper/interpreters/: IOStepper.scala
scala/src/test/scala/free/: Free.scala
scala/src/test/scala/free/interpreters/: Test.scala
scala/src/test/scala/mtl/: mtl.scala
scala/src/test/scala/mtl/interpreters/: Test.scala
slides/: config.toml
slides/content/: _index.md
slides/layouts/shortcodes/: code.html
tags/: index.xml
unison/: code.u  debugger.u
