cabal-version:      2.4
name:               effects
version:            0.1.0.0
author:             Giacomo Cavalieri
maintainer:         giacomo.cavalieri2@studio.unibo.it
tested-with:        GHC == 9.2.4

common common-exe
    ghc-options: -threaded
                 -rtsopts
                 -with-rtsopts=-N

common common-options
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wredundant-constraints
                        -Wnoncanonical-monad-instances
                        -fhide-source-paths
                        -Wmissing-export-lists
                        -Wpartial-fields
    default-extensions: ConstraintKinds
                        DeriveGeneric
                        GADTs
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        OverloadedStrings
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        ViewPatterns

executable effects
    import:           common-options, common-exe
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
