cabal-version:      2.4
name:               effects
version:            0.1.0.0
author:             Giacomo Cavalieri
maintainer:         giacomo.cavalieri2@studio.unibo.it
tested-with:        GHC == 9.2.4

common common-options
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wredundant-constraints
                        -Wnoncanonical-monad-instances
                        -fhide-source-paths
                        -Wmissing-export-lists
                        -Wpartial-fields
    default-extensions: ConstraintKinds
                        DeriveGeneric
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        OverloadedStrings
                        RankNTypes
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeOperators
                        ViewPatterns

common common-exe
    import:      common-options
    ghc-options: -threaded
                 -rtsopts
                 -with-rtsopts=-N

common common-test
    import:         common-options
    ghc-options:    -threaded

library
    import:            common-options
    hs-source-dirs:    lib
    exposed-modules:   MTL.Core, MTL.Core.Interpreters.Stepper, MTL.Core.Interpreters.Production
                     , MTL.Stepper.Core, MTL.Stepper.Interpreters
                     , Free.Core, Free.Core.Interpreters.Stepper, Free.Core.Interpreters.Production
                     , Free.Stepper.Core, Free.Stepper.Interpreters, Free.App
    build-depends:     base ^>=4.16.3.0
                     , random ^>=1.2.1.1
                     , transformers ^>=0.5.6.2
                     , free ^>=5.1.9

test-suite tests
    import:           common-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    build-depends:    base ^>=4.16.3.0
                    , effects
                    , hspec ^>=2.10.6
                    , transformers ^>=0.5.6.2
                    , free ^>=5.1.9
    other-modules:    Test.MTL, Test.MTL.Interpreters
                    , Test.Free, Test.Free.Interpreters

executable effects
    import:           common-exe
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
                    , effects
    hs-source-dirs:   app
